# squashlog

./: .gitignore  README.md  meson.build
encoder/: meson.build  meson.options
encoder/demos/: meson.build
encoder/examples/: meson.build  posix_basic.c
encoder/include/twig/: bfmt.h  box.h  compiler.h  config.h  packer.h  stream.h
encoder/include/twig/formatters/: printf.h
encoder/include/twig/streams/: byte_queue.h  posix.h
encoder/src/: packer.c
encoder/src/formatters/: meson.build  printf_iface.c  printf_parse.c
encoder/src/streams/: meson.build  posix.c
encoder/src/toolchain/: gcc_like.c  meson.build
include/: binfmt.h  bytestream.h  formatter.h  os_log.h  printf_format.h  string_extract.h  string_utils.h  unix_bytestream.h  utils.h
include/formatters/: printf.h
include/platform/: binformat.h  type_container.h
src/: binfmt_gcc_like.c  encoder.c  printf_format.c  string_extract.c  string_utils.c  unix_bytestream.c
src/formatters/: format_internal.h  packer.c  printf.c
